--- a/src/assets/sass/pages/_templates.scss
+++ b/src/assets/sass/pages/_templates.scss
@@ -54,9 +54,11 @@
 .template--profile {
 
   .layout__header {
-    @include respond-to('tablet') {
-      width: 50%;
-    }
+    //
+  }
+
+  .focus__tasks li {
+    font-size: 1.36rem;
   }
 
 }
