--- a/src/assets/sass/components/_polls.scss
+++ b/src/assets/sass/components/_polls.scss
@@ -502,6 +502,10 @@
       select {
         font-size: .8rem;
       }
+
+      @include respond-to('tablet') {
+        min-width: 0;
+      }
     }
 
     .answer--pick {
@@ -543,6 +547,10 @@
           margin-right: 0;
           opacity: 1;
         }
+      }
+
+      @include respond-to('tablet') {
+        min-width: 0;
       }
 
       &.picked {
