Add password change field in profile
Tweak profile style

--- a/src/assets/sass/components/_rollout.scss
+++ b/src/assets/sass/components/_rollout.scss
@@ -85,6 +85,10 @@ $rollout-height: (2 * $padding-size + $line-height);
   .layout__group & {
     margin: 0 .64rem;
 
+    @include respond-to('tablet') {
+      margin: 0;
+    }
+
     &:not(:nth-last-child(1)):not(.roll-out--opened) {
       border-bottom-color: $white;
     }
