--- a/src/assets/sass/layout/_profile.scss
+++ b/src/assets/sass/layout/_profile.scss
@@ -1,3 +1,7 @@
+.profile__welcome {
+  padding-bottom: 1.64rem;
+}
+
 .profile__photo {
   padding: 1.64rem 1rem;
   position: relative;
@@ -62,8 +66,8 @@ $button-size: 3 * 1.36rem;
   width: $button-size;
   z-index: 0;
 
-  .profile__photot:hover &,
-  .device--mobile & {
+  .profile__photo:hover &,
+  .device--touch & {
     width: calc(#{$pic-size} + #{$button-size} * 3);
   }
 
@@ -90,7 +94,7 @@ $button-size: 3 * 1.36rem;
 }
 
 .profile__focus-box {
-  margin-top: -10rem;
+  // margin-top: -10rem;
   padding: 0;
 
   > div {
