--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -150,6 +150,7 @@ $grid: (
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
 /// @see {mixin} respond-to
 $breakpoints: (
+  'phone-pocket': (max-width: 359px),
   'phone-tall': (min-width: 360px, orientation: portrait),
   'phone-long': (min-width: 360px, orientation: landscape),
   'phablet': (min-width: 410px),
