--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -159,6 +159,23 @@ section {
   @include flex-flow(row wrap);
   position: relative;
 
+  @include respond-to('phone-pocket') {
+    &.diary{
+      > .grid__item {
+        &.grid__item--1of2 {
+          width: 100%;
+          > span.diary {
+            position: relative;
+            top: 1%;
+            left: 0;
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
+
   > .grid__item {
     @include flex(0 1 auto);
 
@@ -186,14 +203,20 @@ section {
       width: (100% / 3);
     }
 
-    &.grid__item--1of2 {
+    &.grid__item--1of2{
       width: (100% / 2);
+
+      > span.diary {
+        position: absolute; bottom: 0; left: 0; display: block; width: 50%;
+        &.dropdown {
+          bottom: 0.5rem !important; 
+        }
+      }
     }
 
     &.grid__item--1of1 {
       width: 100%;
     }
-
     // TODO Grid System - Revise breakpoints
 
   }
