--- a/src/assets/sass/components/_contentlist.scss
+++ b/src/assets/sass/components/_contentlist.scss
@@ -9,7 +9,7 @@
 
   @at-root section#{&} {
     padding: 0 0 2rem;
-    margin: calc(1rem - 1%) -.5rem;
+    margin: calc(1rem - 2.5%);
   }
 }
 
@@ -167,6 +167,7 @@
     width: $quart;
     margin: .5%;
     padding-bottom: 24.5%;
+    font-size: .75rem;
 
     &:nth-child(4n+2) {
       width: $quart;
@@ -212,9 +213,6 @@
     @include transform(scale(1.02));
     text-decoration: none;
     color: $white;
-    background-color: $brand-color;
-    box-shadow: $shadow-1;
-
     z-index: 11;
 
     &::before,
@@ -222,13 +220,16 @@
       opacity: 1;
     }
 
-    &.cover__container, .cover__container {
-      background-color: $brand-color-darker;
-      color: $white !important;
+    &:not(.cover__container) {
+      background-color: $brand-color;
+      box-shadow: $shadow-1;
+    }
+
+    &.cover__container,
+    .cover__container {
       box-shadow: $shadow-2a;
 
       .image--cover {
-        @include transform($move-to-center scale(1.25));
         opacity: .36;
       }
     }
