--- a/src/assets/sass/components/_nav.scss
+++ b/src/assets/sass/components/_nav.scss
@@ -1,15 +1,25 @@
-$nav-height: 4rem;
 $menu-width: calc(100% - 3.64rem);
 
-// Nav realted body setup
+// General navigation styles
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  color: rgba($text-color, .64);
+  text-decoration: none;
+  display: block;
+
+  @include on-event {
+    text-decoration: none;
+  }
+}
+
+// Mobile setup
 .device--mobile {
   transition: padding .3s;
-
-  header,
-  main {
-    @include transform(translateZ(0));
-    @include transition(transform .36s);
-  }
 
   &.content--to-side {
     header,
@@ -33,27 +43,13 @@ $menu-width: calc(100% - 3.64rem);
   &.nav--double {
     padding-top: ($nav-height * 2);
   }
-
-  &:not(.template--poll) {
-    main > section:first-of-type {
-      padding-top: $nav-height;
-    }
-  }
 }
 
-// Nav bar
-header {
+// Nav bar inside the app
+.scope--inside {
   $nav-transition: 'background-color .64s, box-shadow .36s, height .36s';
   // 3D Menu Trigger
   $cube: 1.36rem;
-
-  .device--mobile & {
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    z-index: 1000;
-  }
 
   .nav--primary,
   .nav--secondary {
@@ -150,34 +146,27 @@ header {
 
       @at-root {
         @include keyframes(intro-scale) {
-          0% {
-            @include size(0);
+          0% { @include size(0);
           }
 
-          100% {
-            @include size(16px);
+          100% { @include size(16px);
           }
         }
 
         @include keyframes(attention) {
-          0% {
-            @include size(16px);
+          0% { @include size(16px);
           }
 
-          5% {
-            @include size(10px);
+          5% { @include size(10px);
           }
 
-          10% {
-            @include size(18px);
+          10% { @include size(18px);
           }
 
-          11% {
-            @include size(16px);
+          11% { @include size(16px);
           }
 
-          100% {
-            @include size(16px);
+          100% { @include size(16px);
           }
         }
       }
@@ -254,33 +243,20 @@ header {
     }
   }
   // Nav states
-  .device--mobile &.scrolled,
-  .device--mobile &.nav--show-menu {
+  &.device--mobile .scrolled {
 
     .nav__menu-trigger,
     .nav__icon--inbox {
       background-color: $white;
       box-shadow: $shadow-2a;
     }
-    // .nav--primary,
-    // .nav--secondary {
-    //   background-color: $white;
-    //   box-shadow: $shadow-3;
-    //   color: $nav-color;
-    //   height: ($nav-height - .75);
-    // }
-
-    .nav--secondary {
-      // box-shadow: $shadow-2a;
-    }
 
     .nav__icon--logo {
-      // font-size: $nav-height - 2.5;
       opacity: 0;
     }
   }
 
-  &.hidden {
+  .hidden {
     @include transform(translate(0, -$nav-height));
 
     .nav--primary {
@@ -296,27 +272,10 @@ header {
     }
   }
 
-  &.nav--show-menu {
+  .nav--show-menu {
     .nav--secondary {
       @include transform(translate(0, -$nav-height));
     }
-  }
-}
-
-// Main Menu
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav a {
-  color: rgba($text-color, .64);
-  text-decoration: none;
-
-  @include on-event {
-    color: $text-color;
-    text-decoration: none;
   }
 }
 
@@ -352,6 +311,10 @@ nav a {
 
     @include respond-to('tablet') {
       font-size: .88rem;
+    }
+
+    @include on-event {
+      color: $black;
     }
 
     &[class^='rg-']::before {
@@ -392,7 +355,7 @@ nav a {
     width: 4rem;
 
     .nav__link--avatar {
-      border-radius: 4rem !important;
+      border-radius: 49% !important;
       box-shadow: $frame-shadow-outside;
       display: block;
       height: 100%;
@@ -410,6 +373,153 @@ nav a {
         width: 101%;
         z-index: -1;
       }
+    }
+  }
+}
+
+// Outside scope navigation
+.scope--outside {
+  $nav-padding: .15em .36em;
+
+  nav a {
+    padding: $nav-padding;
+  }
+
+  // Main Navigation
+  .nav__main-menu--public {
+    @include clearfix;
+    display: block;
+    padding: 1rem 0;
+  }
+
+  .main-menu--public__container {
+    display: block;
+
+    ul {}
+    li {
+      display: inline-block;
+      margin: 0 1rem;
+    }
+  }
+
+  .main-menu--public__left {
+    display: none;
+    float: left;
+
+    @include respond-to('tablet') {
+      display: block;
+    }
+
+    li {
+      margin-left: 0;
+    }
+  }
+
+  .main-menu--public__right {
+    display: block;
+    float: right;
+
+    li {
+      margin-right: 0;
+
+      &:first-child {
+        display: none;
+
+        @include respond-to('phablet') {
+          display: inline-block;
+        }
+      }
+    }
+  }
+
+  .main-menu--public__logo {
+    @include transform(translate(0, -50%));
+    top: 53.6%;
+    left: 1rem;
+    display: block;
+    position: absolute;
+    font-size: 0;
+    letter-spacing: -.015em;
+    line-height: $ico-size-m;
+    font-weight: $bold;
+
+    @include respond-to('tablet') {
+      @include transform(translate(-50%, -50%));
+      left: 50%;
+    }
+
+    a::before {
+      font-size: $ico-size-m;
+    }
+  }
+
+  // Footer navigation
+  .nav__footer-menu--public {
+    @include clearfix;
+
+    ul {}
+    li {
+      display: inline-block;
+      margin: .15rem .5rem;
+
+      @include respond-to('tablet') {
+        margin: 0 .36rem;
+      }
+    }
+
+    a {
+      color: transparentize($white, .36);
+
+      @at-root .nav__footer-menu--public a {
+        @include on-event($scope: '.device--no-touch.scope--outside') {
+          color: $white;
+        }
+      }
+    }
+  }
+
+  .footer-menu--public--left {
+    display: block;
+
+    @include respond-to('tablet') {
+      float: left;
+      li {
+        margin-left: 0;
+      }
+    }
+  }
+
+  .footer-menu--public--right {
+    display: block;
+    margin-top: 1rem;
+
+    @include respond-to('tablet') {
+      float: right;
+      margin-top: 0;
+
+      li {
+        margin-right: 0;
+      }
+    }
+  }
+
+  .footer__copyright p {
+    margin-top: 1rem;
+    padding: $nav-padding;
+
+    @include respond-to('phablet') {
+      margin-top: 0;
+    }
+  }
+
+  &.nav--transparent {
+    header {
+      z-index: 1;
+    }
+    main {
+      z-index: 0;
+      padding-top: 6rem;
+      margin-top: -6rem;
     }
   }
 }
