--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -45,36 +45,24 @@ body {
   box-sizing: border-box;
   width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden;
-
-  // &.device--mobile { overflow-x: hidden; }
-  // &.page--noScroll { overflow: hidden; }
 }
 
 // Prevent transitions before elements load;
 
 body {
+  overflow-x: hidden;
+  height: 100%;
   padding-bottom: 5rem;
+
+  &.scope--outside {
+    padding-bottom: 0;
+  }
 
   &.preload {
     img { opacity: 0; }
     * {
       @include transition(none !important);
     }
-  }
-
-  // TODO Development aid
-  &::before {
-    opacity: .64;
-    display: none;
-    content: '';
-    position: fixed;
-    background: image('grid.png') top center;
-    background-size: 100% auto;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
   }
 }
 
@@ -136,7 +124,7 @@ a {
   }
 
   &.link--spare {
-    display: block;
+    display: block !important;
     padding: 1rem;
     color: inherit;
     opacity: .64;
@@ -146,74 +134,60 @@ a {
       opacity: 1;
     }
   }
+
+  .paint--brand &:not(.button) {
+    @include on-event {
+      color: $white;
+    }
+  }
 }
 
 
 // General layout
+
+.page__wrapper,
+.layout__container {
+  max-width: $max-width; // 1
+  margin-left: auto; // 2
+  margin-right: auto; // 2
+  width: 100%; // 1
+  position: relative;
+}
+
+.page__wrapper {
+  min-height: 100vh;
+
+  .device--touch & {
+    max-width: none;
+  }
+  // NOTE Development aid
+  // background: image('grid.png') top center repeat-y;
+  // background-size: 100% auto;
+}
+
+.layout__container {
+  // background: image('grid.png') top center repeat-y;
+  // background-size: 100% auto;
+
+  padding: 0 .5rem;
+
+  @include respond-to('hd') {
+    padding: 0;
+  }
+}
+
 section {
   &.layout--fullscreen {
     min-height: 100vh;
   }
 }
 
-// Grid system
-// TODO Finish grid system
-.grid__container {
-  @include display(flex);
-  @include flex-flow(row wrap);
+header,
+main,
+footer {
+  @include transform(translateZ(0));
+  @include transition(transform .36s);
   position: relative;
-
-  > .grid__item {
-    @include flex(0 1 auto);
-
-    &.grid__item--1of8 {
-      width: (100% / 8);
-    }
-
-    &.grid__item--1of7 {
-      width: (100% / 7);
-    }
-
-    &.grid__item--1of6 {
-      width: (100% / 6);
-    }
-
-    &.grid__item--1of5 {
-      width: (100% / 5);
-    }
-
-    &.grid__item--1of4 {
-      width: (100% / 4);
-    }
-
-    &.grid__item--1of3 {
-      width: (100% / 3);
-    }
-
-    &.grid__item--1of2 {
-      width: (100% / 2);
-    }
-
-    &.grid__item--1of1 {
-      width: 100%;
-    }
-
-    // TODO Grid System - Revise breakpoints
-
-  }
-
-  &.grid--gutter {
-    $gutter: 1rem;
-
-    section & {
-      margin: -($gutter / 2);
-      margin-top: $gutter / 2;
-    }
-
-    > .grid__item {
-      padding: $gutter / 2;
-    }
-  }
 }
 
 // Elevations and layout
@@ -449,7 +423,16 @@ section {
 
   &.button-bar--divided {
     .grid__item + .grid__item {
-      border-left: 1px solid rgba(dynamic-color($brand-color), .1);
+      &::before {
+        @include size(1px 100%);
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        top: 0;
+        background-color: rgba(dynamic-color($brand-color), .1);
+      }
     }
   }
 }
@@ -479,6 +462,11 @@ section {
 
 .flow--center {
   text-align: center;
+
+  .button {
+    @include transform(translate3d(0, 0, 0) !important);
+    margin: 0 !important;
+  }
 }
 
 // Ripples
