--- a/src/assets/sass/base/_fonts.scss
+++ b/src/assets/sass/base/_fonts.scss
@@ -5,7 +5,7 @@
 // Light
 @font-face {
   font-family: 'MontserratWeb';
-  src: font('montserrat-light-webfont.woff2') format('woff2'), font('montserrat-light-webfont.woff') format('woff'), font('montserrat-light-webfont.ttf') format('truetype');
+  src: font('montserrat-light-webfont.woff2') format('woff2'), font('montserrat-light-webfont.woff') format('woff');
   font-weight: $light;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
 // Regular
 @font-face {
   font-family: 'MontserratWeb';
-  src: font('montserrat-regular-webfont.woff2') format('woff2'), font('montserrat-regular-webfont.woff') format('woff'), font('montserrat-regular-webfont.ttf') format('truetype');
+  src: font('montserrat-regular-webfont.woff2') format('woff2'), font('montserrat-regular-webfont.woff') format('woff');
   font-weight: $regular;
   font-style: normal;
 }
@@ -21,22 +21,30 @@
 // Semi Bold
 @font-face {
   font-family: 'MontserratWeb';
-  src: font('montserrat-semibold-webfont.woff2') format('woff2'), font('montserrat-semibold-webfont.woff') format('woff'), font('montserrat-semibold-webfont.ttf') format('truetype');
+  src: font('montserrat-semibold-webfont.woff2') format('woff2'), font('montserrat-semibold-webfont.woff') format('woff');
   font-weight: $bold;
+  font-style: normal;
+}
+
+// Black
+@font-face {
+  font-family: 'MontserratWeb';
+  src: font('montserrat-black-webfont.woff2') format('woff2'), font('montserrat-black-webfont.woff') format('woff');
+  font-weight: $heavy;
   font-style: normal;
 }
 
 // Glyphs
 @font-face {
   font-family: 'reko-glyphs-10';
-  src: font('reko-glyphs-10.woff') format('woff'), font('reko-glyphs-10.ttf') format('truetype'), font('reko-glyphs-10.svg#reko-glyphs-10') format('svg');
+  src: font('reko-glyphs-10.woff') format('woff'), font('reko-glyphs-10.svg#reko-glyphs-10') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'social-reach';
-  src: font('social-reach.woff') format('woff'), font('social-reach.ttf') format('truetype'), font('social-reach.svg#social-reach') format('svg');
+  src: font('social-reach.woff') format('woff'), font('social-reach.svg#social-reach') format('svg');
   font-weight: normal;
   font-style: normal;
 }
