--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -44,6 +44,18 @@ h4 {
       position: absolute;
     }
   }
+
+  [class^='rg-'],
+  [class*=' rg-'],
+  [data-icon] {
+    display: block;
+    text-align: center;
+    margin: 1rem 0;
+
+    &::before {
+      font-size: $ico-size-l;
+    }
+  }
 }
 
 h1 {
