--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -1,3 +1,34 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+
+.scope--inside {
+  &.device--mobile {
+    header {
+      left: 0;
+      position: fixed;
+      top: 0;
+      width: 100vw;
+      z-index: 1000;
+    }
+
+    main > section:first-of-type {
+      padding-top: $nav-height;
+    }
+  }
+}
+
+.scope--outside {
+  header {
+    position: relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 0 1rem 0 0;
+
+    @include respond-to('tablet') {
+      padding: 1rem 1.36rem;
+    }
+  }
+}
