--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -22,14 +22,14 @@
 'base/base',
 'base/fonts',
 'base/typography',
+'base/grid',
 'base/helpers';
 
 // 4. Layout-related sections
 @import
 'layout/header',
 'layout/footer',
-'layout/main',
-'layout/profile';
+'layout/main';
 
 // 5. Components
 @import
@@ -45,11 +45,12 @@
 'components/rollout';
 
 // 6. Page-specific styles
+// 'pages/home',
 @import
+'pages/profile',
 'pages/campaign',
 'pages/diary',
 'pages/templates',
-'pages/home',
 'pages/sign',
 'pages/notifs';
 
