--- a/src/assets/sass/pages/_diary.scss
+++ b/src/assets/sass/pages/_diary.scss
@@ -19,7 +19,7 @@
     margin-bottom: 1%;
   }
 
-  @include respond-to('tablet') {
+  @include respond-to('phablet') {
     &,
     & + &,
     &:last-child {
@@ -28,6 +28,12 @@
       margin-top: 0;
       margin-bottom: 0;
       padding-bottom: 36%;
+      overflow: hidden;
+
+      &::after {
+        content:'';
+        display: block;
+      }
     }
   }
 }
