--- a/src/assets/sass/pages/_templates.scss
+++ b/src/assets/sass/pages/_templates.scss
@@ -2,17 +2,27 @@
 // This file contains style overrides based on template tags.
 // -----------------------------------------------------------------------------
 
-.template--intro {
-  padding: 0 !important;
-
+.template--full-width {
   .page__wrapper {
     max-width: none;
   }
+}
+
+.template--intro {
+  padding: 0 !important;
+  background-color: $brand-color;
 
   main {
+    @include transition(none !important);
     left: 0 !important;
     width: 100% !important;
-    @include transition(none !important)
+    padding-bottom: 0;
+  }
+
+  @at-root header nav a {
+    @include on-event($scope: '.scope--outside.template--intro.device--no-touch') {
+      color: $accent-color;
+    }
   }
 
   .splash {
@@ -40,6 +50,8 @@
 }
 
 .template--profile--empty {
+  padding-bottom: 0;
+
   main {
     @include brand-gradient($image: 'backs/ph12.jpg');
 
@@ -72,11 +84,9 @@
 }
 
 .template--poll {
-  // main {
-  //   min-height: 100vh;
-  //   position: relative;
-  //   padding-left: 2rem;
-  // }
+  &.scope--inside.device--mobile main>section:first-of-type {
+    padding-top: 0;
+  }
 
   &.poll--end-screen {
     .poll__icon {
