--- a/src/assets/sass/components/_inputs.scss
+++ b/src/assets/sass/components/_inputs.scss
@@ -98,8 +98,17 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 1.25rem;
     line-height: 2rem;
+  }
+
+  input:not([type=file]),
+  select,
+  textarea {
+    font-size: 1.25rem;
+  }
+
+  input + label {
+    font-size: 1rem;
   }
 
   //// Text fields
@@ -123,7 +132,6 @@
       opacity: 0;
     }
 
-
     &[type=date] {
       height: calc(3rem + 1px);
     }
@@ -137,8 +145,8 @@
       color: rgba($static, $alpha-minor);
       font-weight: $light;
       position: absolute;
-      // white-space: nowrap;
-      white-space: pre-line;
+      white-space: nowrap;
+      // white-space: normal;
       padding: 0;
       margin: 0;
       z-index: 1;
@@ -596,11 +604,19 @@
 
   /// File Upload
   &.input--file-upload {
+    @include appearance(none);
+    @include backface-visibility(hidden);
+    @include transform(translate3d(0, 0, 0));
+    @include transition($transition);
     margin: 0;
     padding: 0;
     height: 6rem;
     overflow: hidden;
     // border: 1px solid $frame-color;
+
+    &.cover__container {
+      background-color: $black !important;
+    }
 
     .input__field {
       display: none;
@@ -635,10 +651,6 @@
         position: absolute;
         top: 50%;
         left: 1.5rem;
-        &.diary {
-          font-size: $ico-size-l;
-          left: 0.5rem;
-        }
       }
 
       .file-upload__cta {
@@ -651,6 +663,48 @@
         display: block;
         font-size: .75rem;
         line-height: 1.36em;
+      }
+    }
+
+    &.input--button {
+      @include size($button-height);
+      background-color: $white;
+      border-radius: 50%;
+      border: 1px solid $frame-color;
+      box-shadow: 0;
+      color: $text-color;
+      cursor: pointer;
+      font-size: 1.36rem;
+      font-weight: $regular;
+      line-height: 1em;
+      min-width: $button-height;
+      min-height: $button-height;
+      overflow: hidden;
+      position: relative;
+      text-align: center;
+      white-space: nowrap;
+      z-index: 1;
+      padding: 0;
+
+      label {
+        padding: 0;
+      }
+
+      [data-icon] {
+        @include transform($move-to-center);
+        font-size: $button-height * .64;
+        line-height: 1;
+        left: 50%;
+        position: absolute;
+        top: 52%;
+      }
+
+      @include on-event {
+        color: $white;
+        border-color: $accept-color;
+        background-color: $accept-color;
+        box-shadow: $shadow-button;
+        outline: none;
       }
     }
   }
